deploy/cloud-common/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mighty-fine
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /mighty-fine
        backend:
          serviceName: mighty-fine-fe
          servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /traefik
        backend:
          serviceName: traefik-ingress-service
          servicePort: admin
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dotnet-prometheus-example
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /dotnet
        backend:
          serviceName: dotnet-prometheus-example
          servicePort: http
